--- a/quienes_somos.css
+++ b/quienes_somos.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  padding-top: 75px;
+  padding-top: 50px;
 }
 
 header {
@@ -32,10 +32,10 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('quienes_somos_image2.jpg');   
+  background-image: url('index_image.jpg');   
   background-size: cover;
   color: #000000;
-  height: 700px;
+  height: 550px;
 }
 
 .jumbotron h2 {
@@ -46,7 +46,7 @@ header p {
   text-shadow: 2px 2px 2px #000000;
 }
 
-.jumbotron p {
+.jumbotron h3 {
   text-align: justify;
   font-size: 25px;
   font-weight: 500;
